# Snek

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Graphics.cpp  Graphics.hpp  Input.cpp  Input.hpp  Main.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Snek.cpp  Snek.hpp  Sprite.cpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  ThreadPool.cpp  ThreadPool.hpp  Transform.cpp  Transform.hpp  Utilities.cpp  Utilities.hpp  glad.c
src/Shaders/: standard.frag  standard.vert
